--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(Competitive_Programming)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(Competitive_Programming
-        "main.cpp")
+        "SPOJ/CPTTRN1 - Character Patterns (Act 1)/main.cpp")
