Add code for ONP - Transform the Expression

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(Competitive_Programming)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(Competitive_Programming
-        "SPOJ/FCTRL2 - Small factorials/main.cpp")
+        "SPOJ/ONP - Transform the Expression/main.cpp")
